--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -r ts-node/register spec/*.spec.ts"
+    "test": "mocha -r ts-node/register spec/*.spec.ts",
+    "tsc": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hash.js": "^1.1.7"
+    "@types/es6-shim": "^0.31.39",
+    "@types/express": "^4.16.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "hash.js": "^1.1.7",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
@@ -18,6 +24,7 @@
     "mocha": "^5.2.0",
     "prettier": "^1.15.3",
     "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
     "typescript": "^3.2.2"
   }
 }
