--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -r ts-node/register spec/*.spec.ts",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "node_0": "node build/dev/node.js 3000 http://localhost:3000",
+    "node_1": "node build/dev/node.js 3001 http://localhost:3001",
+    "node_2": "node build/dev/node.js 3002 http://localhost:3002",
+    "node_3": "node build/dev/node.js 3003 http://localhost:3003"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +19,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "hash.js": "^1.1.7",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
